# touchstone-python

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  comparison_analysis.md  example.s2p  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  publish.yml
docs/: api.md  api.rst  conf.py  getting_started.rst  index.md  index.rst  usage.rst
docs/_static/: custom.css
docs/_templates/: page.html
examples/: comprehensive.py  plotting.py  quickstart.py
examples/sample_data/: wifi_filter.s2p
src/touchstone/: __init__.py
src/touchstone/parser/: __init__.py  models.py  reader.py  utils.py
src/touchstone/parser/models/: __init__.py  data_format.py  frequency_point.py  frequency_unit.py  network_parameter.py  parameter_type.py  touchstone_data.py  touchstone_options.py
src/touchstone/parser/parsing/: __init__.py  data_line_tokenizer.py  option_line_parser.py  touchstone_parser.py  touchstone_parser_exception.py
src/touchstone/parser/utilities/: __init__.py  frequency_converter.py  network_parameter_extensions.py  touchstone_data_extensions.py  touchstone_writer.py
tests/: test_coverage_gap.py  test_csv_export.py  test_edge_cases.py  test_format_validation.py  test_frequency_converter.py  test_frequency_point.py  test_functional.py  test_integration.py  test_n_port.py  test_network_parameter.py  test_numerical.py  test_option_line_parser.py  test_stress.py  test_touchstone_data_extensions.py  test_touchstone_parser.py  test_touchstone_writer.py
tests/benchmarks/: test_parser_benchmarks.py
tests/test_data/: amplifier.s2p  bandpass_filter.s2p  comments_only.s2p  coupler.s3p  filter_4port.s4p  minimal.s2p  no_option_line.s1p  simple.s1p
