[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "touchstone.parser"
version = "1.0.1"
description = "Python library for Touchstone .sNp parsing and S-parameter analysis in RF/microwave engineering."
readme = "README.md"
authors = [
    { name = "Surya Mangaraj", email = "contact@suryaraj.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed",
]
keywords = [
    "Touchstone",
    "parser",
    "S-parameters",
    "RF",
    "microwave",
    "engineering",
    "NumPy",
    "scikit-rf",
    "EDA",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black==24.8.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
viz = [
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/suryakantamangaraj/touchstone-python"
Documentation = "https://github.com/suryakantamangaraj/touchstone-python#readme"
Repository = "https://github.com/suryakantamangaraj/touchstone-python.git"
Issues = "https://github.com/suryakantamangaraj/touchstone-python/issues"
Changelog = "https://github.com/suryakantamangaraj/touchstone-python/releases"

[tool.setuptools.packages.find]
where = ["src"]
include = ["touchstone*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
